[gd_scene load_steps=12 format=3 uid="uid://crnqxnkpihg50"]

[ext_resource type="Script" uid="uid://cla0nmspniunk" path="res://Predios/Inventario_Predios/upgrade_modal_2.gd" id="1_wder3"]
[ext_resource type="Texture2D" uid="uid://da34a6wawskx3" path="res://Assets/Sprites/Sprite sheet for Basic Pack.png" id="2_182s5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ug4e0"]
atlas = ExtResource("2_182s5")
region = Rect2(245, 5, 38, 38)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_182s5"]
texture = ExtResource("2_182s5")
region_rect = Rect2(275, 212, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ujuth"]
texture = ExtResource("2_182s5")
region_rect = Rect2(275, 178, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xpi4p"]
texture = ExtResource("2_182s5")
region_rect = Rect2(275, 212, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pkbq7"]
texture = ExtResource("2_182s5")
region_rect = Rect2(275, 178, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_exrhi"]
texture = ExtResource("2_182s5")
region_rect = Rect2(275, 212, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h8n1g"]
texture = ExtResource("2_182s5")
region_rect = Rect2(275, 178, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fnf0w"]
texture = ExtResource("2_182s5")
region_rect = Rect2(467, 164, 10, 10)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c0f8w"]
texture = ExtResource("2_182s5")
region_rect = Rect2(451, 162, 10, 12)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_wder3")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 85.0
offset_top = -106.0
offset_right = 316.0
offset_bottom = 108.0
grow_vertical = 2
texture = SubResource("AtlasTexture_ug4e0")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.662745, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "UPGRADES"

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = -51.0
offset_right = 126.0
offset_bottom = 51.0
grow_vertical = 2
theme_override_constants/separation = 6

[node name="BotaoRenda" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxTexture_182s5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_182s5")
theme_override_styles/normal = SubResource("StyleBoxTexture_ujuth")
text = "x0.5 DInheiro 10000.00"

[node name="BotaoConhecimento" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxTexture_xpi4p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xpi4p")
theme_override_styles/normal = SubResource("StyleBoxTexture_pkbq7")

[node name="BotaoDespesas" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxTexture_exrhi")
theme_override_styles/pressed = SubResource("StyleBoxTexture_exrhi")
theme_override_styles/normal = SubResource("StyleBoxTexture_h8n1g")
text = "-0.5 Despesas: 10000.00"

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -30.0
offset_right = 15.0
grow_horizontal = 2
grow_vertical = 0

[node name="fechar" type="Button" parent="TextureRect/VBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_fnf0w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fnf0w")
theme_override_styles/normal = SubResource("StyleBoxTexture_c0f8w")

[connection signal="pressed" from="TextureRect/VBoxContainer2/fechar" to="." method="_on_fechar_pressed"]
